--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h2>Contact Us</h2>
         <p>You can reach us at:</p>
         <p>Address: LaGrange,GA 30241</p>
-        <p>Phone: 1-800-fuckit</p>
+        <p>Phone: 706-132-4567</p>
         <p>Email: kandmretailmerchandise@gmail.com</p>
     </main>
     
