--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Home Page -->
   <div id="home">
-    <h1>Welcome to My Retail Store</h1>
+    <h1>Welcome K & M Retail</h1>
     <p>We offer a wide range of products for all your needs.</p>
   </div>
 
