--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- Navigation -->
   <nav>
     <div class="container">
+      <img src="LOGO.png" alt="Logo">
       <h1 class="logo">K & M Retail</h1>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
