--- a/products.html
+++ b/products.html
@@ -23,13 +23,13 @@
       <img src="product1.jpg" alt="Product 1">
       <h3>Product 1</h3>
       <p>Description of product 1.</p>
-      <button>Add to Cart</button>
+      <a href="cart.html" class="btn">Add to Cart</a>
     </div>
     <div class="product">
       <img src="product2.jpg" alt="Product 2">
       <h3>Product 2</h3>
       <p>Description of product 2.</p>
-      <button>Add to Cart</button>
+      <a href="cart.html" class="btn">Add to Cart</a>
     </div>
   </div>
 
