--- a/products.html
+++ b/products.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<html>
+  
+  
+</html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -16,8 +22,8 @@
     </ul>
   </nav>
 
-  <!-- Products Page -->
-  <div id="products" class="container">
+  <!-- Products Page --> 
+  <div id="product-container" class="container">
     <h2>Products</h2>
     <div class="product">
       <img src="product1.jpg" alt="Product 1">
